--- a/AndroidTrello/app/src/main/res/values/strings.xml
+++ b/AndroidTrello/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AndroidTrello</string>
     <string name="action_settings">Settings</string>
+    <string name="copyright">Copyright © Vaiuu Group BD</string>
+    <string name="lets_go">LET\'S GO</string>
 </resources>
